--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <a href="https://www.instagram.com/a_linyer/" target="_blank" class="link-2">Instagram</a>
             <br/>
         </div>
+        <br>
+        <img src="img/002_Älvsala_Bild.jpg" alt="001_Cham_Bild">
     </div>
 </body>
 </html>
