--- a/index.html
+++ b/index.html
@@ -8,25 +8,34 @@
 </head>
 <body class="body">
     <div class="div-block-4">
+        LINYER<br/>
+        <br/>
         <div class="text-block-6">
-            LINYER<br/> 
+            <div class="align-horizontal">
+                <div class="text-left">Architekturbüro</div>
+                <div class="slash">|</div>
+                <div class="text-right">Arkitektkontor</div>
+            </div>
+            <div class="align-horizontal">
+                <div class="text-left">Zürich</div>
+                <div class="slash">|</div>
+                <div class="text-right">Stockholm</div>
+            </div>
+            <div class="align-horizontal">
+                <div class="text-left">ETH SIA</div>
+                <div class="slash">|</div>
+                <div class="text-right">KTH</div>
+            </div>
             <br/>
-            Architekturbüro / Arkitekturbyro<br/> 
-            Zürich / Stockholm<br/>
-            ETH / KTH<br/>       
-            <br/>
-            Emma Lindén + Lowis Gujer<br/>
             +41 76 220 62 84<br/>
             contact@linyer.info<br/>
-            <br/>
             Neue Hard 12<br/>
             CH 8004 Zürich<br/>
             <br/>
             <a href="https://www.instagram.com/a_linyer/" target="_blank" class="link-2">Instagram</a>
-            <br/>
         </div>
         <br>
-        <img src="img/002_Älvsala_Bild.jpg" alt="001_Cham_Bild">
+        <img src="img/002_Älvsala_Bild.jpg" alt="002_Älvsala_Bild">
     </div>
 </body>
 </html>
