--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="text-right">Stockholm</div>
             </div>
             <div class="align-horizontal">
-                <div class="text-left">ETH SIA</div>
+                <div class="text-left">ETH</div>
                 <div class="slash">|</div>
                 <div class="text-right">KTH</div>
             </div>
