--- a/works.html
+++ b/works.html
@@ -2,37 +2,33 @@
 <html data-wf-domain="www.linyer.info" data-wf-page="5ed8947082212ccc732764fc" data-wf-site="5ed61cce8b992c856c0103dd">
 <head>
     <meta charset="utf-8"/>
-    <title>linyer KLG</title>
+    <title>works</title>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link rel="stylesheet" href="index.css">
 </head>
 <body class="body">
     <div class="div-block-4">
-        <h1 class="page-title">LINYER</h1>
+        <h1 class="page-title">WORKS</h1>
         <br/>
         <div class="text-block-6">
             <div class="align-horizontal">
-                <div class="text-left">Architekturbüro</div>
+                <div class="text-left">20XX Hjelmbacken</div>
                 <div class="slash">|</div>
-                <div class="text-right">Arkitektkontor</div>
+                <div class="text-right">Wooden palace</div>
             </div>
             <div class="align-horizontal">
-                <div class="text-left">Zürich</div>
+                <div class="text-left">20XX Älvsala</div>
                 <div class="slash">|</div>
-                <div class="text-right">Stockholm</div>
+                <div class="text-right"><a href=works001.html>Extended extension</a></div>
             </div>
             <div class="align-horizontal">
-                <div class="text-left">dipl. ETH</div>
+                <div class="text-left">2024 WBW Musikschule Cham</div>
                 <div class="slash">|</div>
-                <div class="text-right">KTH</div>
+                <div class="text-right">"Der Holländer"</div>
             </div>
-            <br/>
-            contact@linyer.info<br/>
-            Neue Hard 12<br/>
-            CH-8004 Zürich<br/>
-            <br/>
-            <a href="https://www.instagram.com/a_linyer/" target="_blank" class="link-2">Instagram</a>
-        </div>
+        <br>
+        <a href=index.html>Contact</a><br/>
+        <br/>
     </div>
 </body>
 </html>
