--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
                 <div class="text-right">Stockholm</div>
             </div>
             <div class="align-horizontal">
-                <div class="text-left">dipl. ETH</div>
+                <div class="text-left">MSc. Arch. ETH</div>
                 <div class="slash">|</div>
-                <div class="text-right">KTH</div>
+                <div class="text-right">MSc. Arch. KTH SAR</div>
             </div>
             <br/>
             contact@linyer.info<br/>
+            +41 76 220 62 84
+            4. OG<br/>
             Neue Hard 12<br/>
             CH-8004 Zürich<br/>
             <br/>
