--- a/index.html
+++ b/index.html
@@ -5,35 +5,41 @@
     <title>linyer KLG</title>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link rel="stylesheet" href="index.css">
+    <style>
+        body {
+            background: linear-gradient(to right, rgb(255, 0, 0) 50%, rgb(0, 0, 255) 50%);
+        }
+    </style>
 </head>
 <body class="body">
     <div class="div-block-4">
-        <h1 class="page-title">LINYER</h1>
-        <br/>
         <div class="text-block-6">
             <div class="align-horizontal">
+                <div class="text-left">LIN</div>
+                <div class="text-right">YER</div>
+            </div>
+            <br/>
+            <div class="align-horizontal">
                 <div class="text-left">Architekturbüro</div>
-                <div class="slash">|</div>
+                <div class="slash"> </div>
                 <div class="text-right">Arkitektkontor</div>
             </div>
             <div class="align-horizontal">
                 <div class="text-left">Zürich</div>
-                <div class="slash">|</div>
+                <div class="slash"> </div>
                 <div class="text-right">Stockholm</div>
             </div>
             <div class="align-horizontal">
                 <div class="text-left">MSc. Arch. ETH</div>
-                <div class="slash">|</div>
-                <div class="text-right">MSc. Arch. KTH SAR</div>
+                <div class="slash"> </div>
+                <div class="text-right">MSc. Arch KTH SAR</div>
             </div>
             <br/>
-            contact@linyer.info<br/>
-            +41 76 220 62 84<br/>
-            4. OG<br/>
-            Neue Hard 12<br/>
-            CH-8004 Zürich<br/>
-            <br/>
-            <a href="https://www.instagram.com/a_linyer/" target="_blank" class="link-2">Instagram</a>
+            <div class="align-horizontal">
+                <div class="text-left"><a href=contact.html>Contact</a></div>
+                <div class="slash"> </div>
+                <div class="text-right"><a href="https://www.instagram.com/a_linyer/" target="_blank" class="link-2">Instagram</a></div>
+            </div>
         </div>
     </div>
 </body>
