--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-wf-domain="www.linyer.info" data-wf-page="5ed8947082212ccc732764fc" data-wf-site="5ed61cce8b992c856c0103dd">
 <head>
     <meta charset="utf-8"/>
-    <title>linyer KLG</title>
+    <title>LINYER</title>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link rel="stylesheet" href="index.css">
     <style>
