--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="align-horizontal">
                 <div class="text-left">MSc. Arch. ETH</div>
                 <div class="slash"> </div>
-                <div class="text-right">MSc. Arch KTH SAR</div>
+                <div class="text-right">Arkitekt KTH SAR</div>
             </div>
             <br/>
             <div class="align-horizontal">
