--- a/contact.html
+++ b/contact.html
@@ -2,22 +2,26 @@
 <html data-wf-domain="www.linyer.info" data-wf-page="5ed8947082212ccc732764fc" data-wf-site="5ed61cce8b992c856c0103dd">
 <head>
     <meta charset="utf-8"/>
-    <title>LINYER</title>
+    <title>contact</title>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link rel="stylesheet" href="index.css">
     <style>
         body {
-            background-color: rgb(0, 255, 0);
-            color: black;
+            background-color: rgb(255, 255, 0);
+            color:rgb(0, 0, 0)
         }
         a {
-    color: rgb(0, 0, 0);   
-}
+            font-size: 85px;
+            color: black;
+        }
     </style>
 </head>
 <body class="body">
     <div class="div-block-4">
-        <a href=index.html>LINYER</a>
+        <div class="align-horizontal">
+            <div class="title-left"><a href=index.html>LIN</a></div>
+            <div class="title-right"><a href=index.html>YER</a></div>
+        </div>
             <br/>
             contact@linyer.info<br/>
             +41 76 220 62 84<br/>
