--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <div class="div-block-4">
         <div class="text-block-6">
             <div class="align-horizontal">
-                <div class="title-left">LIN</div>
-                <div class="title-right">YER</div>
+                <div class="title-left">L I N </div>
+                <div class="slash"> </div>
+                <div class="title-right">Y E R</div>
             </div>
             <br/>
             <div class="align-horizontal">
