--- a/contact.html
+++ b/contact.html
@@ -8,23 +8,18 @@
     <style>
         body {
             background-color: rgb(255, 255, 0);
-            color:rgb(0, 0, 0)
+            color:rgb(255, 0, 0)
         }
         a {
-            font-size: 85px;
-            color: black;
+            color: rgb(255, 0, 0);
         }
     </style>
 </head>
 <body class="body">
     <div class="div-block-4">
-        <div class="align-horizontal">
-            <div class="title-left"><a href=index.html>LIN</a></div>
-            <div class="title-right"><a href=index.html>YER</a></div>
-        </div>
-            <br/>
             contact@linyer.info<br/>
             +41 76 220 62 84<br/>
             4. OG Neue Hard 12<br/>
             CH-8004 Zürich<br/>
             <br/>
+            <a href=index.html>Home</a></div>
