--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <style>
         body {
-            background: linear-gradient(to right, rgb(255, 0, 0) 50%, rgb(0, 0, 255) 50%);
+            background: linear-gradient(to right, rgb(255, 255, 0) 50%, rgb(255, 255, 0) 50%);
         }
     </style>
 </head>
@@ -22,23 +22,23 @@
             <br/>
             <div class="align-horizontal">
                 <div class="text-left">Architekturbüro</div>
-                <div class="slash"> </div>
+                <div class="slash">|</div>
                 <div class="text-right">Arkitektkontor</div>
             </div>
             <div class="align-horizontal">
                 <div class="text-left">Zürich</div>
-                <div class="slash"> </div>
+                <div class="slash">|</div>
                 <div class="text-right">Stockholm</div>
             </div>
             <div class="align-horizontal">
                 <div class="text-left">MSc. Arch. ETH</div>
-                <div class="slash"> </div>
-                <div class="text-right">Arkitekt KTH SAR</div>
+                <div class="slash">|</div>
+                <div class="text-right">Arkitekt SAR/MSA</div>
             </div>
             <br/>
             <div class="align-horizontal">
                 <div class="text-left"><a href=contact.html>Contact</a></div>
-                <div class="slash"> </div>
+                <div class="slash">|</div>
                 <div class="text-right"><a href="https://www.instagram.com/a_linyer/" target="_blank" class="link-2">Instagram</a></div>
             </div>
         </div>
