--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,14 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link rel="stylesheet" href="index.css">
     <style>
-        body {
-            background-color: rgb(255, 255, 0);
-            color:rgb(0, 0, 0)
-        }
-        a {
-            color: rgb(255, 0, 0);
-        }
     </style>
+         <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                const colors = ["rgb(255, 0, 0)", "rgb(0, 0, 255)", "rgb(255, 255, 0)", "rgb(0, 128, 0)"]; // Red, Blue, Yellow
+                const randomColor = colors[Math.floor(Math.random() * colors.length)];
+                document.body.style.backgroundColor = randomColor;
+            });
+        </script>
 </head>
 <body class="body">
     <div class="div-block-4">
