--- a/contact.html
+++ b/contact.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="index.css">
     <style>
     </style>
-         <script>
-            document.addEventListener("DOMContentLoaded", function () {
-                const colors = ["rgb(255, 0, 0)", "rgb(0, 0, 255)", "rgb(255, 255, 0)", "rgb(0, 128, 0)"]; // Red, Blue, Yellow
-                const randomColor = colors[Math.floor(Math.random() * colors.length)];
-                document.body.style.backgroundColor = randomColor;
-            });
-        </script>
 </head>
 <body class="body">
+    <div class="linyer-tab">
+        <div class="linyer-tab-section linyer-tab-left">
+            <a href="contact.html" class="linyer-tab-link">Contact</a>
+        </div>
+        <div class="linyer-tab-section linyer-tab-center">
+            <a href="index.html" class="linyer-tab-link">LINYER</a>
+        </div>
+        <div class="linyer-tab-section linyer-tab-right">
+            <a href="https://www.instagram.com/a_linyer/" target="_blank" class="linyer-tab-link">Instagram</a>
+        </div>
+    </div>
     <div class="div-block-4">
             contact@linyer.info<br/>
-            +41 76 220 62 84<br/>
             4. OG Neue Hard 12<br/>
             CH-8004 Zürich<br/>
-            <br/>
-            <a href=index.html>Home</a></div>
