--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <link rel="stylesheet" href="index.css">
     <style>
     </style>
-     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const colors = ["rgb(255, 0, 0)", "rgb(0, 0, 255)", "rgb(255, 255, 0)", "rgb(0, 128, 0)"]; // Red, Blue, Yellow
-            const randomColor = colors[Math.floor(Math.random() * colors.length)];
-            document.body.style.backgroundColor = randomColor;
-        });
-    </script>
 </head>
 <body class="body">
+    <div class="linyer-tab">
+        <div class="linyer-tab-section linyer-tab-left">
+            <a href="contact.html" class="linyer-tab-link">Contact</a>
+        </div>
+        <div class="linyer-tab-section linyer-tab-center">
+            <a href="index.html" class="linyer-tab-link">LINYER</a>
+        </div>
+        <div class="linyer-tab-section linyer-tab-right">
+            <a href="https://www.instagram.com/a_linyer/" target="_blank" class="linyer-tab-link">Instagram</a>
+        </div>
+    </div>
     <div class="div-block-4">
         <div class="text-block-6">
-            <div class="align-horizontal">
-                <div class="title-left">L I N </div>
-                <div class="slash"></div>
-                <div class="title-right">Y E R</div>
-            </div>
             <br/>
+            <img src="img/001_Hjelmbacken.JPG" alt="LINYER Image" style="max-width: 100%; height: auto; margin: 20px 0;" />
             <div class="align-horizontal">
                 <div class="text-left">Architekturbüro</div>
                 <div class="slash">|</div>
@@ -34,16 +34,15 @@
                 <div class="slash">|</div>
                 <div class="text-right">Stockholm</div>
             </div>
+             <div class="align-horizontal">
+                <div class="text-left">Lowis Gujer</div>
+                <div class="slash">|</div>
+                <div class="text-right">Emma Lindén</div>
+            </div>
             <div class="align-horizontal">
                 <div class="text-left">MSc. Arch. ETH</div>
                 <div class="slash">|</div>
                 <div class="text-right">Arkitekt SAR/MSA</div>
-            </div>
-            <br/>
-            <div class="align-horizontal">
-                <div class="text-left"><a href=contact.html>Contact</a></div>
-                <div class="slash">|</div>
-                <div class="text-right"><a href="https://www.instagram.com/a_linyer/" target="_blank" class="link-2">Instagram</a></div>
             </div>
         </div>
     </div>
