--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
 <body class="body">
     <div class="linyer-tab">
         <div class="linyer-tab-section linyer-tab-left">
-            <a href="contact.html" class="linyer-tab-link">Contact</a>
+            <a href="contact.html" class="linyer-tab-link">Info</a>
         </div>
         <div class="linyer-tab-section linyer-tab-center">
             <a href="index.html" class="linyer-tab-link">LINYER</a>
         </div>
         <div class="linyer-tab-section linyer-tab-right">
-            <a href="https://www.instagram.com/a_linyer/" target="_blank" class="linyer-tab-link">Instagram</a>
+            <a href="https://www.instagram.com/a_linyer/" target="_blank" class="linyer-tab-link">Work</a>
         </div>
     </div>
     <div class="div-block-4">
