--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
     <div class="div-block-4">
         <div class="text-block-6">
             <br/>
-            <img src="img/001_Hjelmbacken.JPG" alt="LINYER Image" style="max-width: 100%; height: auto; margin: 20px 0;" />
+            <div class="img-hover-container">
+                <img src="img/001_Hjelmbacken.JPG" alt="LINYER Image" class="hover-img" />
+                <div class="img-hover-text">Hjelmbacken, A House for Two Brothers</div>
+            </div>
+            <br/>
+            <div class="img-hover-container">
+                <img src="img/004_Building systems.jpeg" alt="LINYER Image" class="hover-img" />
+                <div class="img-hover-text">Buildings Systems, Diploma KTH</div>
+            </div>
+            <br/>
+            <div class="img-hover-container">
+                <img src="img/001_BambooGreenhouse_01.jpeg" alt="LINYER Image" class="hover-img" />
+                <div class="img-hover-text">Bamboo Greenhouse, Chair of Architectural Behaviorology, ETHZ</div>
+            </div>
+            <br/>
             <div class="align-horizontal">
                 <div class="text-left">Architekturbüro</div>
                 <div class="slash">|</div>
