--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
             <a href="https://www.instagram.com/a_linyer/" target="_blank" class="linyer-tab-link">Work</a>
         </div>
     </div>
-    <div class="div-block-4">
-            <img src="img/003_Emma och Lowis 007.jpeg" alt="LINYER Image" style="max-width: 320px; width: 100%; height: auto; margin: 20px auto; display: block; filter: grayscale(100%);" /><br/>
+    <div class="contact-content">
+            <img src="img/003_Emma och Lowis 007.jpeg" alt="LINYER Image" style="max-width: 400px; width: 100%; height: auto; margin: 20px auto; display: block; filter: grayscale(100%);" /><br/>
             <br/>
             ABOUT<br/>
             LINYER is an architecture office based in Stockholm and Zürich founded and operated by Lowis Gujer and Emma Lindén since 2024. Although their main expertise lies in working with the local and small scale their interest covers a wide range of topics such as architectural designs for public buildings and educational facilities, constructive detail solutions in 1:1, visualising ideas by illustrations and models, urban planning, and writing. In their approach they always seek to communicate with and understand every stakeholder involved as each mind can provide enrichment to the development of an idea. Besides their engagment for LINYER both of them are involved with supporting endeavours. Lowis is employed as a teaching assistant by the Chair of Architectural Behaviorology with Prof. Momoyo Kaijima at the institute for design and architecture D-ARCH ETHZ. Emma works for Sakke Studio as project leading architect in the early stages.<br/>
@@ -32,10 +32,11 @@
             CH-8004 Zürich<br/> 
             <br/>
             LINKS<br/>
-            <a href="https://www.kaijima.arch.ethz.ch">Chair of Architectural Behaviorology, Prof. Momoyo Kaijima, IEA, D-ARCH, ETHZ</a>
+            <a href="https://www.kaijima.arch.ethz.ch">Chair of Architectural Behaviorology, Prof. Momoyo Kaijima, D-ARCH, ETHZ</a>
             <a href="https://www.sakke.ch">Sakke Studio</a>
-            <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">Die Säulenhalle: Endlich ein Zentrum für Zürich West!</a>
             <a href="https://www.hochparterre.ch/campus/eine-stadt-ohne-schlachthof">Eine Stadt ohne Schlachthof?</a>
+            <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">Die Säulenhalle: Endlich ein Zentrum für Zürich West!</a>
             <br/>
             COLLABORATORS<br/>
-            Hochparterre, IGHZH, Dalla Santa Birkeland Arkitekter, Lauro Nächt, Beatrice Kiser, 
+            Dalla Santa Birkeland Arkitekter, Nando von Arb, Lauro Nächt, Beatrice Kiser, Lars Ruge, Hochparterre, IGHZH, Stiftung Hamasil
+            </div>
