--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
                         <img src="img/008_Romanshorn.png" alt="LINYER Image" class="hover-img" />
                         <div class="img-hover-text">Stadthaus Romanshorn<br/>Beatrice Kiser</div>
                     </div>
+                        <div class="img-hover-container">
+                        <img src="img/006_Cham_Section perspective.jpeg" alt="LINYER Image" class="hover-img" />
+                        <div class="img-hover-text">Musikschule Cham<br/>Dalla Santa Birkeland, Lauro Nächt</div>
+                    </div>
                 </div>
             </div>
             <br/>
