--- a/contact.html
+++ b/contact.html
@@ -26,16 +26,20 @@
             ABOUT<br/>
             LINYER is an architecture office based in Stockholm and Zürich founded and operated by Lowis Gujer and Emma Lindén since 2024. Although their main expertise lies in working with the local and small scale their interest covers a wide range of topics such as architectural designs for public buildings and educational facilities, constructive detail solutions in 1:1, visualising ideas by illustrations and models, urban planning, and writing. In their approach they always seek to communicate with and understand every stakeholder involved as each mind can provide enrichment to the development of an idea. Besides their engagment for LINYER both of them are involved with supporting endeavours. Lowis is employed as a teaching assistant by the Chair of Architectural Behaviorology with Prof. Momoyo Kaijima at the institute for design and architecture D-ARCH ETHZ. Emma works for Sakke Studio as project leading architect in the early stages.<br/>
             <br/>
-            INFO<br/>
+            Emma Lindén (b. 1994, Stockholm SE) is an architect MAS/SAR. During her studies at Royal Institute of Technology of Stockholm she did an exchange year at ETHZ. She worked for General Architecture, Lütjens Padmanabhan, Maich Swift and Boltshauser Architekten until she joined SAKKE Studio.<br/>
+            <br/>
+            Lowis Gujer (b. 1995, Zürich CH) is an architect MSc Arch. ETHZ. He graduated from ETHZ with a diploma thesis titled „Eine Stadt ohne Schlachthof?“ under the guidance of Prof. Momoyo Kaijima. After gaining experience in architectural practices in Zürich, Stockholm and London he joined the Chair of Architectural Behaviorology at the start of 2024. Since then he has been working as a teaching assistant for the second year design course, the master design course "Japan Studio", and other teaching projects.<br/>
+            <br/>
+            CONTACT<br/>
             contact@linyer.info<br/>
             4. OG Neue Hard 12<br/>
             CH-8004 Zürich<br/> 
             <br/>
             LINKS<br/>
-            <a href="https://www.kaijima.arch.ethz.ch">Chair of Architectural Behaviorology, Prof. Momoyo Kaijima, D-ARCH, ETHZ</a>
-            <a href="https://www.sakke.ch">Sakke Studio</a>
-            <a href="https://www.hochparterre.ch/campus/eine-stadt-ohne-schlachthof">Eine Stadt ohne Schlachthof?</a>
-            <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">Die Säulenhalle: Endlich ein Zentrum für Zürich West!</a>
+            <a href="https://www.sakke.ch">- Sakke Studio</a>
+            <a href="https://www.kaijima.arch.ethz.ch">- Chair of Architectural Behaviorology, Prof. Momoyo Kaijima, D-ARCH, ETHZ</a>
+            <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">- Die Säulenhalle: Endlich ein Zentrum für Zürich West!</a>
+            <a href="https://www.hochparterre.ch/campus/eine-stadt-ohne-schlachthof">- Eine Stadt ohne Schlachthof?</a>
             <br/>
             COLLABORATORS<br/>
             Dalla Santa Birkeland Arkitekter, Nando von Arb, Lauro Nächt, Beatrice Kiser, Lars Ruge, Hochparterre, IGHZH, Stiftung Hamasil
