--- a/contact.html
+++ b/contact.html
@@ -9,19 +9,25 @@
     </style>
 </head>
 <body class="body">
+<body class="index-page"></body>
     <div class="linyer-tab">
         <div class="linyer-tab-section linyer-tab-left">
-            <a href="contact.html" class="linyer-tab-link">Info</a>
+            <a href="contact.html" class="linyer-tab-link">INFO</a>
+            <div>
+                <a href="contact_de.html" class="linyer-tab-link">de.</a>
+                <a href="contact_sv.html" class="linyer-tab-link">sv.</a>
+            </div>
         </div>
         <div class="linyer-tab-section linyer-tab-center">
-            <a href="index.html" class="linyer-tab-link">LINYER</a>
+            <a href="work.html" class="linyer-tab-link">LINYER</a>
         </div>
         <div class="linyer-tab-section linyer-tab-right">
-            <a href="https://www.instagram.com/a_linyer/" target="_blank" class="linyer-tab-link">Work</a>
+            <a href="https://www.instagram.com/a_linyer/" target="_blank" class="linyer-tab-link">INSTAGRAM</a>
+            <div>contact@linyer.info</div>
         </div>
     </div>
     <div class="contact-content">
-            <img src="img/003_Emma och Lowis 007.jpeg" alt="LINYER Image" style="max-width: 400px; width: 100%; height: auto; margin: 20px auto; display: block; filter: grayscale(100%);" /><br/>
+            <img src="img/CONTACT_03.png" alt="LINYER Image" style="max-width: 800px; width: 100%; height: auto; margin: 20px auto; display: block;" /><br/>
             <br/>
             ABOUT<br/>
             LINYER is an architecture office based in Stockholm and Zürich founded and operated by Lowis Gujer and Emma Lindén since 2024. Although their main expertise lies in working with the local and small scale their interest covers a wide range of topics such as architectural designs for public buildings and educational facilities, constructive detail solutions in 1:1, visualising ideas by illustrations and models, urban planning, and writing. In their approach they always seek to communicate with and understand every stakeholder involved as each mind can provide enrichment to the development of an idea. Besides their engagment for LINYER both of them are involved with supporting endeavours. Lowis is employed as a teaching assistant by the Chair of Architectural Behaviorology with Prof. Momoyo Kaijima at the institute for design and architecture D-ARCH ETHZ. Emma works for Sakke Studio as project leading architect in the early stages.<br/>
