--- a/work_de.html
+++ b/work_de.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="linyer-tab-section linyer-tab-center">
-            <a href="work_de.html" class="linyer-tab-link">LINYER</a>
+            <a href="index.html" class="linyer-tab-link">LINYER</a>
         </div>
         <div class="linyer-tab-section linyer-tab-right">
             <a href="https://www.instagram.com/a_linyer/" target="_blank" class="linyer-tab-link">INSTAGRAM</a>
